infra-kubernetes/environments/rdev.ali/ecs-ax/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ax-system
---
apiVersion: v1
kind: Service
metadata:
  name: ax-redis
  namespace: ax-system
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    app: ax-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ax-redis
  namespace: ax-system
spec:
  serviceName: ax-redis
  replicas: 1
  selector:
    matchLabels:
      app: ax-redis
  template:
    metadata:
      labels:
        app: ax-redis
    spec:
      containers:
      - name: redis
        image: redis@sha256:858f009f9709ce576febc734aa78b8f6d624b82571f9ddb6bda4377c833b3499
        args: [redis-server, --appendonly, 'yes', --appendfsync, everysec, --dir, /data]
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: '1'
            memory: 1Gi
        readinessProbe:
          exec:
            command: [redis-cli, ping]
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ReadWriteOnce]
      storageClassName: local-path
      resources:
        requests:
          storage: 4Gi
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-only-ax
  namespace: ax-system
spec:
  podSelector:
    matchLabels:
      app: ax-redis
  policyTypes: [Ingress]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ax-server
    ports:
    - protocol: TCP
      port: 6379
